Fix scroll to side instead of down on Firefox

--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -98,6 +98,9 @@ body
   color: $dark-grey
 
 div#wrapper
+  margin:
+    left: auto
+    right: auto
 
 //Header
 header
@@ -111,6 +114,23 @@ header
   font-size: x-large
   padding: $little-space
 
+a
+  color: $blue
+  text-decoration: none
+
+  &.next_section
+    @include float-right
+    @include miso-font
+    @include rounded-corners(8px)
+    clear: both
+    background-color: $grey
+    padding: $little-space
+    font-size: 20px
+  
+  &:active
+    color: #f00
+  &:visited
+    color: $dark-blue
 nav
   width: 552px
   margin-left: auto
@@ -129,6 +149,7 @@ nav
       width: 50px
       margin-right: 18px
   a
+    color: $light-grey
     &:visited
       color: $light-grey
     &:hover 
@@ -144,25 +165,7 @@ section
   padding: 72px 24px 24px
   width: 600px
 
-a
-  color: $blue
-  text-decoration: none
 
-  &.next_section
-    @include float-right
-    @include miso-font
-    @include rounded-corners(8px)
-    clear: both
-    background-color: $grey
-    padding: $little-space
-    font-size: 20px
-  
-  &:active
-    color: #f00
-
-
-  &:visited
-    color: $dark-blue
 //Section headers
 div.title
   @include shadow
